--- a/app/src/main/res/layout/activity_category_grid.xml
+++ b/app/src/main/res/layout/activity_category_grid.xml
@@ -11,40 +11,12 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="dontknow.finhacks.com.shoppersproject.CategoryGrid">
 
-    <ImageButton
-        android:layout_width="150dp"
-        app:srcCompat="@drawable/ic_menu_manage"
-        android:id="@+id/imageButton3"
-        android:layout_height="150dp"
-        android:layout_alignTop="@+id/imageButton4"
-        android:layout_toRightOf="@+id/imageButton6"
-        android:layout_toEndOf="@+id/imageButton6"
-        android:layout_marginLeft="11dp"
-        android:layout_marginStart="11dp" />
-
-    <ImageButton
-        android:layout_height="150dp"
-        app:srcCompat="@drawable/ic_menu_camera"
-        android:id="@+id/imageButton5"
-        android:layout_width="150dp"
-        android:layout_alignTop="@+id/imageButton6"
-        android:layout_alignLeft="@+id/imageButton3"
-        android:layout_alignStart="@+id/imageButton3" />
-
-    <ImageButton
-        app:srcCompat="@mipmap/ic_launcher"
-        android:id="@+id/imageButton2"
-        android:layout_height="150dp"
-        android:layout_width="150dp"
-        android:layout_alignTop="@+id/imageButton"
-        android:layout_alignLeft="@+id/imageButton3"
-        android:layout_alignStart="@+id/imageButton3" />
-
+    <!-- Clothing  -->
     <ImageButton
         app:srcCompat="@drawable/ic_menu_send"
         android:layout_marginLeft="33dp"
         android:layout_marginStart="33dp"
-        android:id="@+id/imageButton"
+        android:id="@+id/clothingButton"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_alignParentTop="true"
@@ -52,25 +24,59 @@
         android:layout_alignParentStart="true"
         android:layout_marginTop="13dp" />
 
+    <!-- Electronics -->
+    <ImageButton
+        app:srcCompat="@mipmap/ic_launcher"
+        android:id="@+id/electronicsButton2"
+        android:layout_height="150dp"
+        android:layout_width="150dp"
+        android:layout_alignTop="@+id/clothingButton"
+        android:layout_alignLeft="@+id/gamesButton"
+        android:layout_alignStart="@+id/gamesButton" />
+
+    <!--Games -->
+    <ImageButton
+        android:layout_width="150dp"
+        app:srcCompat="@drawable/ic_menu_manage"
+        android:id="@+id/gamesButton"
+        android:layout_height="150dp"
+        android:layout_alignTop="@+id/restaurantButton"
+        android:layout_toRightOf="@+id/imageButton6"
+        android:layout_toEndOf="@+id/imageButton6"
+        android:layout_marginLeft="11dp"
+        android:layout_marginStart="11dp" />
+
+    <!-- Restaurants -->
+    <ImageButton
+        app:srcCompat="@android:drawable/arrow_up_float"
+        android:layout_marginTop="13dp"
+        android:id="@+id/restaurantButton"
+        android:layout_height="150dp"
+        android:layout_width="150dp"
+        android:layout_below="@+id/clothingButton"
+        android:layout_alignLeft="@+id/clothingButton"
+        android:layout_alignStart="@+id/clothingButton" />
+
+    <!-- Cosmetics -->
+    <ImageButton
+        android:layout_height="150dp"
+        app:srcCompat="@drawable/ic_menu_camera"
+        android:id="@+id/cosmesticsButton"
+        android:layout_width="150dp"
+        android:layout_alignTop="@+id/imageButton6"
+        android:layout_alignLeft="@+id/gamesButton"
+        android:layout_alignStart="@+id/gamesButton" />
+
+    <!-- Home -->
     <ImageButton
         android:layout_width="150dp"
         app:srcCompat="@android:drawable/btn_star"
         android:id="@+id/imageButton6"
         android:layout_height="150dp"
         android:layout_marginTop="13dp"
-        android:layout_below="@+id/imageButton4"
-        android:layout_alignLeft="@+id/imageButton4"
-        android:layout_alignStart="@+id/imageButton4" />
-
-    <ImageButton
-        app:srcCompat="@android:drawable/arrow_up_float"
-        android:layout_marginTop="13dp"
-        android:id="@+id/imageButton4"
-        android:layout_height="150dp"
-        android:layout_width="150dp"
-        android:layout_below="@+id/imageButton"
-        android:layout_alignLeft="@+id/imageButton"
-        android:layout_alignStart="@+id/imageButton" />
+        android:layout_below="@+id/restaurantButton"
+        android:layout_alignLeft="@+id/restaurantButton"
+        android:layout_alignStart="@+id/restaurantButton" />
 
     <Button
         android:text="Done"
