--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -2,8 +2,9 @@
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="150dp"
     android:id="@+id/card_view"
     android:layout_margin="5dp"
     card_view:cardBackgroundColor="#81C784"
@@ -11,7 +12,8 @@
     card_view:cardElevation="3dp"
     card_view:contentPadding="4dp"
     android:foreground="?selectableItemBackground"
-    android:clickable="true" >
+    android:clickable="true"
+    >
 
     <RelativeLayout
         android:layout_width="match_parent"
