--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,17 +3,17 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/nav_category"
             android:icon="@drawable/ic_menu_camera"
             android:title="Category" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_payment"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
+            android:title="Payment" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/nav_CardActivity"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
+            android:title="Deals" />
         <item
             android:id="@+id/nav_manage"
             android:icon="@drawable/ic_menu_manage"
